--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/vim.symlink/bundle/vim-ruby-debugger"]
 	path = vim/vim.symlink/bundle/vim-ruby-debugger
 	url = git://github.com/astashov/vim-ruby-debugger.git
+[submodule "vim/vim.symlink/bundle/snipmate"]
+	path = vim/vim.symlink/bundle/snipmate
+	url = https://github.com/msanders/snipmate.vim.git
