--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ git/gitconfig.symlink
 vim/vim.symlink/bundle/
 config/config.symlink/fish/fish_history
 config/config.symlink/nvim/plugged/
+config/config.symlink/nvim/undodir
